--- a/pixelate.css
+++ b/pixelate.css
@@ -2133,14 +2133,14 @@ body{
   }
   #uploadsvg{
     position: absolute;
-    top: 22vh;
+    top: 20vh;
     left: calc(45vw - 3vh);
   }
   #uploadtitle{
     position: absolute;
     width: 100%;
     font-family: 'Clash Display', sans-serif;
-    font-size: 32px;
+    font-size: 24px;
     font-weight: 900;
     color: #1A171D;
     top: 28vh;
@@ -2150,10 +2150,10 @@ body{
     position: absolute;
     width: 100%;
     font-family: 'Clash Display', sans-serif;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 400;
     color: #1A171Dc0;
-    top: 34vh;
+    top: 33vh;
     width: 100%;
   }
   #browselink{
@@ -2431,7 +2431,7 @@ body{
       border-color: #1A171D;
       border-radius: 2vh;
       outline: none;
-      box-shadow: 1.6vh 1.6vh 0 #1A171D;
+      box-shadow: 2vw 2vw 0 #1A171D;
   }
   #colorsubmit{
       position: absolute;
@@ -2517,11 +2517,11 @@ body{
       letter-spacing: 0.5px;
       text-align: center;
       cursor: url('pointer.svg'),auto;
-      box-shadow: 1.6vh 1.6vh 0 #1A171D;
+      box-shadow: 2vw 2vw 0 #1A171D;
   }
    #paletteshuffle:active{
     box-shadow: 0 0 0 #1A171D;
-    margin: 1.6vh 0 0 1.6vh;
+    margin: 2vw 0 0 2vw;
    }
   
   #modal{
@@ -2729,9 +2729,9 @@ body{
     font-family: 'Clash Display', sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 14px;
     letter-spacing: 0.5px;
-    width: calc(80vw - 8vh);
+    width: calc(80vw - 12vh);
     position: absolute;
     left: 10vh;
     top: 5vh;
@@ -2757,7 +2757,7 @@ body{
     width: 100%;
     height: 75%;
     display: block;
-    margin: 0 auto 0;
+    margin: 4vh auto 0;
   }
   #approvemint2{
     display: none;
@@ -2767,7 +2767,7 @@ body{
     width: 100%;
     height: 75%;
     display: block;
-    margin: 0 auto 0;
+    margin: 4vh auto 0;
   }
   
   #success{
